v2.6.11 Update examples sketches to version 1.6
* Enhanced 'watch' mode now monitors '*.glsl' files...

v2.6.10 Update to jruby-complete-1.7.20
* Possibly the last 1.7 series releases prior to jruby-9.0.0.0?

v2.6.9 Fix wrapped sketches (no-one complained, yet old hands prefer them?)
* simplified the loading of files to monitor, in watch mode

v2.6.8 Some more refactoring, mainly tidying up library_loader/app interface.
* changes for Vec2D and Vec3D, added eql? (exact match) and dup (alias copy)

v2.6.7 Update to use jruby-complete-1.7.19, replaced monkey patching of 
* String, by creating StringExtra and CamelString classes

v2.6.6 Update to use jruby-complete-1.7.18

v2.6.5 Update to use jruby-complete-1.7.16.2
* Some more refactoring including helper_methods, and base runner
* No need for erb when running bare sketches. For class wrapped sketches
* make sure to call new, after all the only point in writing a class wrapped
* sketch is to send runtime parameter (:title, :fullscreen, etc)

v2.6.4 Update to use jruby-complete-1.7.16.1
* Some general refactoring of app.rb, moved examples to
* their own github repo.

v2.6.3 Update to use jruby-complete-1.7.16
* Avoid Vec2D hypot NaNN with guards, correct 
* --inner template, some more refactoring, full_screen is now only
* available via a runtime arg (there is only one way to do it..)
* now adding Range.clip (like numpy.clip) which is used to implement
* processing constrain. Sometimes it will be better to use clip directly.

v2.6.2 Update to use jruby-complete-1.7.15
* X and Y screen offset for sketch, can be set in ~/.rp5rc
* A post initialization hook has been included to allow custom parameter setting
* More deprecated methods have been removed anyone wanting pow(x), sq(x),
* radians(x) can easily make their own if they must. Prefer x**2, x * x and
* x.radians in ruby-processing etc..

v2.6.1 The templates for the improved sketch creator, broke app export