@@ -1,0 +1,10 @@
+require 'rpextras'
+
+LibraryProxy = Java::ProcessingCore::AbstractLibrary
+
+# classes that inherit from Library are expected to implement
+# the abstract methods of processing.core.AbstractLibrary
+# def pre...
+# def draw...
+# def post...
+# NOOP is fine...
