@@ -1,5 +1,8 @@
 v2.6.11 Update examples sketches to version 1.6
 * Enhanced 'watch' mode now monitors '*.glsl' files...
+* Two new libraries to make it possible to use java reflection methods
+* video_event library makes possible use of 'capturEvent(c)' and 'movieEvent(m)'
+* library_proxy possible use of 'pre', 'draw' and 'post' in a ruby library.
 
 v2.6.10 Update to jruby-complete-1.7.20
 * Possibly the last 1.7 series releases prior to jruby-9.0.0.0?
